fix: make verified native updater compatible with Android 8